Fase 02/ws_roomba/log/build_2025-08-27_17-08-17/robot_roomba/stderr.log
  File "/home/druloko/ws_roomba/install/robot_roomba/lib/python3.12/site-packages/robot_roomba/roomba/lib_robot_roomba.py", line 312
    elif sensor == 'voltage':
    ^^^^
SyntaxError: invalid syntax

